added new styles and colors, also a reset button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="game">
-        <h1 class="title-project">Nuestro primer proyecto: la Vieja</h1>
+        <h1 class="title-project">La Vieja <br> Tic Tac Toe</h1>
         <div class="celda"></div>
         <div class="celda"></div>
         <div class="celda"></div>
@@ -22,7 +22,10 @@
         <div id="resultado"></div>
     </div>
 
-    <h2 class="autor">Proyecto de Ignacio Pinto</h2>
+    <div class="container">
+        <button id="resetButton">Reset</button>
+        <h2 class="autor">Proyecto de Ignacio Pinto</h2>
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
